mobile overflow fix for the the vanilla demo

--- a/packages/canvas-panel-slideshow/src/components/Slideshow/SlideShow.scss
+++ b/packages/canvas-panel-slideshow/src/components/Slideshow/SlideShow.scss
@@ -8,6 +8,7 @@
   &--isMobile {
     background: #fff;
     position: relative;
+    overflow: auto;
   }
   &__inner-frame {
     width: 100%;
